--- a/styles.css
+++ b/styles.css
@@ -28,3 +28,23 @@ h1 {
 .b-white {
     background-color: white;
 }
+.btn-row {
+    margin-left: auto;
+    margin-right: auto;
+}
+button {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    margin: 2px 0;
+    border: solid 1px transparent;
+    border-radius: 4px;
+    padding: 0.5em 1em;
+    color: #ffffff;
+    background-color: #0091b6;
+}
+button:hover {
+    color: #0091b6;
+    border-color: currentColor;
+    background-color: white;
+  }
