button centering disable resize button

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h1 {
     background-color: white;
 }
 .btn-row {
-    margin-left: auto;
+    margin-left: 18%;
     margin-right: auto;
 }
 button {
